--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -9,4 +9,17 @@
     <welcome-file>default.jsp</welcome-file>
     <welcome-file>default.htm</welcome-file>
   </welcome-file-list>
+  
+  <servlet>
+    <servlet-name>Another</servlet-name>
+    <jsp-file>/Test.jsp</jsp-file>
+    <init-param>
+        <param-name>defaultGuestName</param-name>
+        <param-value>Guest</param-value>
+    </init-param>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>Another</servlet-name>
+    <url-pattern>/Test.jsp</url-pattern>
+  </servlet-mapping>
 </web-app>
