[feature] deny requests to haha that use methods other than get and post with status code 403

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -10,6 +10,20 @@
     <welcome-file>default.htm</welcome-file>
   </welcome-file-list>
   
+  <login-config>
+  	<auth-method>BASIC</auth-method>
+  </login-config>
+  
+  <security-constraint>
+  	<web-resource-collection>
+  		<web-resource-name>Test</web-resource-name>
+  		<url-pattern>/haha/*</url-pattern>
+  		<http-method-omission>GET</http-method-omission>
+  		<http-method-omission>POST</http-method-omission>
+ 	</web-resource-collection>
+ 	<auth-constraint/>
+  </security-constraint>
+  
   <servlet>
     <servlet-name>Another</servlet-name>
     <jsp-file>/Test.jsp</jsp-file>
