[feature] deny requests to haha that use get method with status code 401 if not admin

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -15,6 +15,17 @@
   </login-config>
   
   <security-constraint>
+    <web-resource-collection>
+      <web-resource-name>Test</web-resource-name>
+      <url-pattern>/haha/*</url-pattern>
+      <http-method>GET</http-method>
+    </web-resource-collection>
+    <auth-constraint>
+      <role-name>admin</role-name>
+    </auth-constraint>
+  </security-constraint>
+  
+  <security-constraint>
   	<web-resource-collection>
   		<web-resource-name>Test</web-resource-name>
   		<url-pattern>/haha/*</url-pattern>
@@ -23,6 +34,10 @@
  	</web-resource-collection>
  	<auth-constraint/>
   </security-constraint>
+ 
+  <security-role>
+    <role-name>admin</role-name>
+  </security-role>
   
   <servlet>
     <servlet-name>Another</servlet-name>
